--- a/golang/BUILD
+++ b/golang/BUILD
@@ -2,6 +2,7 @@ load(
     "//testing:test_defs.bzl",
     "intellij_integration_test_suite",
     "intellij_unit_test_suite",
+        "intellij_unit_test_suite",
 )
 load(
     "//build_defs:build_defs.bzl",
