--- a/cpp/BUILD
+++ b/cpp/BUILD
@@ -4,7 +4,7 @@ load(
     "intellij_plugin_library",
     "optional_plugin_xml",
     "stamped_plugin_xml",
-    "Test"
+    "Test.xml"
 )
 load(
     "//testing:test_defs.bzl",
