--- a/.github/workflows/pr-assignee.yml
+++ b/.github/workflows/pr-assignee.yml
@@ -26,10 +26,10 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const labelsToAssignees = {
-              'product: CLion': ['tpasternak'],
-              'product: IntelliJ': ['mai93'],
-              'product: GoLand': ['blorente'],
-              'product: Android Studio': ['mai93']
+              'product: CLion': ['sgowroji'],
+              'product: IntelliJ': ['tilakrayal'],
+              'product: GoLand': ['chunduriv'],
+              'product: Android Studio': ['sgowroji']
               // Add more label-assignee mappings here
             };
 
