--- a/base/BUILD
+++ b/base/BUILD
@@ -3,6 +3,7 @@ load(
     "intellij_plugin",
     "intellij_plugin_library",
     "stamped_plugin_xml",
+      "stamped_plugin_xml",
 )
 load(
     "//testing:test_defs.bzl",
