--- a/.github/workflows/pr-assignee.yml
+++ b/.github/workflows/pr-assignee.yml
@@ -18,6 +18,7 @@ jobs:
       contents: read
       pull-requests: write
     needs: triage
+    if: needs.triage.${{ github.event.pull_request.draft == false }} 
     steps:
       - name: Check out code
         uses: actions/checkout@v2
