--- a/.github/workflows/pr-assignee.yml
+++ b/.github/workflows/pr-assignee.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/labeler@v4
+    if: ${{ github.event.pull_request.draft == false }} 
   assign_based_on_labels:
     needs: triage
     runs-on: ubuntu-latest
