--- a/.github/workflows/pr-assignee.yml
+++ b/.github/workflows/pr-assignee.yml
@@ -4,16 +4,7 @@ on:
     types: ["opened", "reopened", "ready_for_review"]
 
 jobs:
-  triage:
-    permissions:
-      contents: read
-      pull-requests: write
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/labeler@v4
-    if: ${{ github.event.pull_request.draft == false }} 
   assign_based_on_labels:
-    needs: triage
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -21,8 +12,12 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v2
-
-      - name: Set Assignees
+     
+      - name: Add Labels
+        uses: actions/labeler@v4
+        if: ${{ github.event.pull_request.draft == false }} 
+       
+      - name: Add Assignees
         uses: actions/github-script@v4
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
