--- a/.github/workflows/pr-assignee.yml
+++ b/.github/workflows/pr-assignee.yml
@@ -31,6 +31,7 @@ jobs:
             };
 
             const labels = context.payload.pull_request.labels.map(label => label.name);
+            echo "$labels"
             const assignees = [];
 
             for (const label of labels) {
