--- a/.github/workflows/pr-assignee.yml
+++ b/.github/workflows/pr-assignee.yml
@@ -18,8 +18,7 @@ jobs:
         if: ${{ github.event.pull_request.draft == false }} 
        
       - name: Add Assignees
-        # uses: actions/github-script@v4
-        uses: Naturalclar/issue-action@v2.0.2
+        uses: actions/github-script@v4
         
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -29,7 +28,6 @@ jobs:
               'product: IntelliJ': ['tilakrayal'],
               'product: GoLand': ['chunduriv'],
               'product: Android Studio': ['sgowroji']
-              // Add more label-assignee mappings here
             };
 
             const labels = context.payload.pull_request.labels.map(label => label.name);
