--- a/.github/workflows/pr-assignee.yml
+++ b/.github/workflows/pr-assignee.yml
@@ -16,20 +16,23 @@ jobs:
       - name: Add Labels
         uses: actions/labeler@v4
         if: ${{ github.event.pull_request.draft == false }}
+        
   add_reviewers:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       pull-requests: write
-    needs : add_labels
+
     steps:   
       - name: Add Assignees
         uses: actions/github-script@v4
         
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          needs : add_labels
           script: |
             const labels = context.payload.pull_request.labels.map(label => label.name);
+            run: echo "$labels"
             const labelsToAssignees = {
               'product: CLion': ['sgowroji'],
               'product: IntelliJ': ['tilakrayal'],
