--- a/gazelle/BUILD
+++ b/gazelle/BUILD
@@ -1,6 +1,7 @@
 load(
     "//testing:test_defs.bzl",
     "intellij_integration_test_suite",
+    "intellij_integration_test_suite",
 )
 load(
     "//build_defs:build_defs.bzl",
