--- a/.github/workflows/pr-assignee.yml
+++ b/.github/workflows/pr-assignee.yml
@@ -1,12 +1,21 @@
-name: Auto Assign Based on Labels
+name: Auto Assign Label and Reviewer
 on:
   pull_request_target:
     types: ["opened", "reopened", "ready_for_review"]
 
 jobs:
-  assign_based_on_labels:
+  add_label:
+    permissions:
+      contents: read
+      pull-requests: write
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/labeler@v4
+    if: ${{ github.event.pull_request.draft == false }} 
+  add_assign:
     runs-on: ubuntu-latest
     permissions:
+      contents: read
       pull-requests: write
     steps:
       - name: Check out code
@@ -16,7 +25,11 @@ jobs:
         uses: actions/github-script@v4
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          needs : add_label
           script: |
+            const labels = context.payload.pull_request.labels.map(label => label.name);
+            echo "$labels" 
+            const assignees = [];
             const labelsToAssignees = {
               'product: CLion': ['tpasternak'],
               'product: IntelliJ': ['mai93'],
@@ -24,10 +37,6 @@ jobs:
               'product: Android Studio': ['mai93']
               // Add more label-assignee mappings here
             };
-
-            const labels = context.payload.pull_request.labels.map(label => label.name);
-            const assignees = [];
-
             for (const label of labels) {
               if (label in labelsToAssignees) {
                 assignees.push(...labelsToAssignees[label]);
