--- a/.github/workflows/pr-assignee.yml
+++ b/.github/workflows/pr-assignee.yml
@@ -31,10 +31,10 @@ jobs:
             echo "$labels" 
             const assignees = [];
             const labelsToAssignees = {
-              'product: CLion': ['tpasternak'],
-              'product: IntelliJ': ['mai93'],
-              'product: GoLand': ['blorente'],
-              'product: Android Studio': ['mai93']
+              'product: CLion': ['sgowroji'],
+              'product: IntelliJ': ['tilakrayal'],
+              'product: GoLand': ['chunduriv'],
+              'product: Android Studio': ['sgowroji']
               // Add more label-assignee mappings here
             };
             for (const label of labels) {
