--- a/.github/workflows/pr-assignee.yml
+++ b/.github/workflows/pr-assignee.yml
@@ -1,17 +1,9 @@
 name: Auto Assign Label and Reviewer
 on:
   pull_request_target:
-    types: ["opened", "reopened", "ready_for_review"]
+    types: ["labeled"]
 
-jobs:
-  add_label:
-    permissions:
-      contents: read
-      pull-requests: write
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/labeler@v4
-    if: ${{ github.event.pull_request.draft == false }} 
+jobs: 
   add_assign:
     runs-on: ubuntu-latest
     permissions:
@@ -26,7 +18,6 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            needs : add_label
             const labels = context.payload.pull_request.labels.map(label => label.name);
             const assignees = [];
             const labelsToAssignees = {
@@ -41,7 +32,6 @@ jobs:
                 assignees.push(...labelsToAssignees[label]);
               }
             }
-
             if (assignees.length > 0) {
               const issue_number = context.payload.pull_request.number;
               await github.issues.addAssignees({
