--- a/.github/workflows/pr-assignee.yml
+++ b/.github/workflows/pr-assignee.yml
@@ -4,9 +4,19 @@ on:
     types: ["opened", "reopened", "ready_for_review"]
 
 jobs:
+  triage:
+    permissions:
+      contents: read
+      pull-requests: write
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/labeler@v4
+    if: ${{ github.event.pull_request.draft == false }}
   assign_based_on_labels:
     runs-on: ubuntu-latest
+    needs: triage
     permissions:
+      contents: read
       pull-requests: write
     steps:
       - name: Check out code
@@ -17,6 +27,9 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
+            const labels = context.payload.pull_request.labels.map(label => label.name);
+            const assignees = [];
+            console.log("added labels are ::::",labels)
             const labelsToAssignees = {
               'product: CLion': ['tpasternak'],
               'product: IntelliJ': ['mai93'],
@@ -24,16 +37,13 @@ jobs:
               'product: Android Studio': ['mai93']
               // Add more label-assignee mappings here
             };
-
-            const labels = context.payload.pull_request.labels.map(label => label.name);
-            const assignees = [];
-
+            console.log("added assignee are ::::",labelsToAssignees)
             for (const label of labels) {
               if (label in labelsToAssignees) {
                 assignees.push(...labelsToAssignees[label]);
               }
             }
-
+            console.log("added assignee are ::::",assignees)
             if (assignees.length > 0) {
               const issue_number = context.payload.pull_request.number;
               await github.issues.addAssignees({
