--- a/.github/workflows/pr-assignee.yml
+++ b/.github/workflows/pr-assignee.yml
@@ -1,4 +1,4 @@
-name: Auto Assign Based on Labels
+name: Auto Assign Labels and Assignees
 on:
   pull_request_target:
     types: ["opened", "reopened", "ready_for_review"]
@@ -29,7 +29,7 @@ jobs:
           script: |
             const labels = context.payload.pull_request.labels.map(label => label.name);
             const assignees = [];
-            run: echo "$labels"
+            echo "$labels"
             const labelsToAssignees = {
               'product: CLion': ['sgowroji'],
               'product: IntelliJ': ['tilakrayal'],
@@ -37,13 +37,13 @@ jobs:
               'product: Android Studio': ['sgowroji']
               // Add more label-assignee mappings here
             };
-            run: echo "$labelsToAssignees"
+            echo "$labelsToAssignees"
             for (const label of labels) {
               if (label in labelsToAssignees) {
                 assignees.push(...labelsToAssignees[label]);
               }
             }
-            run: echo "$assignees"
+            echo "$assignees"
             if (assignees.length > 0) {
               const issue_number = context.payload.pull_request.number;
               await github.issues.addAssignees({
