--- a/.github/workflows/auto_assigne_label.yml
+++ b/.github/workflows/auto_assigne_label.yml
@@ -28,6 +28,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const labels = context.payload.pull_request.labels.map(label => label.name);
+            console.log("line 30",labels)
             const assignees = [];
             const labelsToAssignees = {
               'product: CLion': ['sgowroji'],
