--- a/.github/workflows/auto_assigne_label.yml
+++ b/.github/workflows/auto_assigne_label.yml
@@ -27,6 +27,8 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
+            async ({ github, context }) => {
+            await sleep(1000)
             const labels = context.payload.pull_request.labels.map(label => label.name);
             console.log("line 30",labels)
             const assignees = [];
@@ -51,3 +53,4 @@ jobs:
                 assignees
               });
             }
+            }()
