--- a/.github/workflows/auto_assigne_label.yml
+++ b/.github/workflows/auto_assigne_label.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
       - name: WaitForLabel
-      - uses: GuillaumeFalourd/wait-sleep-action@v1
+        uses: GuillaumeFalourd/wait-sleep-action@v1
         with:
           time: '60'
       - name: Set Assignees
