--- a/.github/workflows/auto_assigne_label.yml
+++ b/.github/workflows/auto_assigne_label.yml
@@ -1,4 +1,4 @@
-name: Auto Assign Labels and Assignees
+name: Auto Add Labels and Assignees
 on:
   pull_request_target:
     types: ["opened", "reopened", "ready_for_review"]
