--- a/.github/workflows/auto_assignees_and_labels.yml
+++ b/.github/workflows/auto_assignees_and_labels.yml
@@ -4,7 +4,7 @@ on:
     types: ["opened", "reopened", "ready_for_review"]
 
 jobs:
-  triage:
+  add_label:
     permissions:
       contents: read
       pull-requests: write
@@ -12,9 +12,9 @@ jobs:
     steps:
     - uses: actions/labeler@v4
     if: ${{ github.event.pull_request.draft == false }}
-  assign_based_on_labels:
+  add_assignee:
     runs-on: ubuntu-latest
-    needs: triage
+    needs: add_label
     permissions:
       contents: read
       pull-requests: write
