--- a/examples/cpp/simple_project/WORKSPACE
+++ b/examples/cpp/simple_project/WORKSPACE
@@ -6,3 +6,6 @@ http_archive(
     strip_prefix = "googletest-1.13.0",
     urls = ["https://github.com/google/googletest/archive/refs/tags/v1.13.0.zip"]
 )
+
+// http_archive
+   
