--- a/examples/java/greetings_project/WORKSPACE
+++ b/examples/java/greetings_project/WORKSPACE
@@ -7,3 +7,10 @@ jvm_maven_import_external(
     licenses = ["notice"],  # Common Public License 1.0
     server_urls = ["https://repo1.maven.org/maven2"],
 )
+jvm_maven_import_external(
+    name = "junit",
+    artifact = "junit:junit:4.13.2",
+    artifact_sha256 = "8e495b634469d64fb8acfa3495a065cbacc8a0fff55ce1e31007be4c16dc57d3",
+    licenses = ["notice"],  # Common Public License 1.0
+    server_urls = ["https://repo1.maven.org/maven2"],
+)
