--- a/examples/java/greetings_project/WORKSPACE
+++ b/examples/java/greetings_project/WORKSPACE
@@ -1,5 +1,5 @@
 load("@bazel_tools//tools/build_defs/repo:jvm.bzl", "jvm_maven_import_external")
-
+test
 jvm_maven_import_external(
     name = "junit",
     artifact = "junit:junit:4.13.2",
