--- a/.github/workflows/pr-label-and-assignee.yml
+++ b/.github/workflows/pr-label-and-assignee.yml
@@ -37,11 +37,11 @@ jobs:
               })).data.map(label => label.name);
             const assignees = [];
             const labelsToAssignees = {
-              'product: CLion': ['ujohnny'],
-              'product: IntelliJ': ['mai93'],
-              'product: GoLand': ['tpasternak'],
-              'product: Android Studio': ['mai93'],
-              'product: PyCharm': ['mai93']
+              'product: CLion': ['gowrojisunil'],
+              'product: IntelliJ': ['gowrojisunil'],
+              'product: GoLand': ['gowrojisunil'],
+              'product: Android Studio': ['gowrojisunil'],
+              'product: PyCharm': ['gowrojisunil']
             };
             for (const label of labels) {
               if (label in labelsToAssignees) {
